creditas-sf/force-app/main/default/objects/Addresses__c/Addresses__c.object-meta.xml
<CustomObject>
    <description>Objeto para registros dos endereços do cliente/empresa, independente da localidade (Brasil/México).</description>
    <label>Endereço</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Numeração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endereços</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>