creditas-sf/force-app/main/default/objects/Addresses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Esse campo determina o qual a conta que está relacionada ao endereço cadastrado.</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Endereços</relationshipLabel>
    <relationshipName>Enderecos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>