creditas-sf/force-app/main/default/objects/Addresses__c/fields/AreaLevel1__c.field-meta.xml
<CustomField>
    <fullName>AreaLevel1__c</fullName>
    <description>Esse campo tem contexto diferente de acordo com o país.</description>
    <label>Nível 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>