creditas-sf/force-app/main/default/objects/Addresses__c/fields/AreaLevel2__c.field-meta.xml
<CustomField>
    <fullName>AreaLevel2__c</fullName>
    <description>Esse campo tem contexto diferente de acordo com o país.</description>
    <label>Cidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>