creditas-sf/force-app/main/default/objects/Addresses__c/fields/AreaLevel3__c.field-meta.xml
<CustomField>
    <fullName>AreaLevel3__c</fullName>
    <description>Esse campo tem contexto diferente de acordo com o país.</description>
    <label>Nível 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>