creditas-sf/force-app/main/default/objects/Addresses__c/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <label>Complemento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>