creditas-sf/force-app/main/default/objects/Addresses__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>País referente ao endereço que está sendo cadastrado</description>
    <inlineHelpText>País referente ao endereço que está sendo cadastrado</inlineHelpText>
    <label>País</label>
    <length>20</length>
    <type>Text</type>
</CustomField>