creditas-sf/force-app/main/default/objects/Addresses__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <formula>&apos;https://www.google.com/maps/search/?api=1&amp;query=&apos; + SUBSTITUTE(Street__c , &quot; &quot;, &quot;%20&quot;)+ &quot;%20&quot; + SUBSTITUTE(StreetNumber__c , &quot; &quot;, &quot;%20&quot;)+ &quot;%20&quot; + SUBSTITUTE(Country__c , &quot; &quot;, &quot;%20&quot;) + &quot;%20&quot; + SUBSTITUTE(PostalCode__c , &quot; &quot;, &quot;%20&quot;)+ &quot;%20&quot; + SUBSTITUTE(Neighborhood__c , &quot; &quot;, &quot;%20&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>