creditas-sf/force-app/main/default/objects/Addresses__c/fields/ExternalAddressId__c.field-meta.xml
<CustomField>
    <fullName>ExternalAddressId__c</fullName>
    <description>Id do registro no sistema externo</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>