creditas-sf/force-app/main/default/objects/Addresses__c/fields/Garantias__c.field-meta.xml
<CustomField>
    <fullName>Garantias__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantias</label>
    <referenceTo>Garantias__c</referenceTo>
    <relationshipLabel>Endereços</relationshipLabel>
    <relationshipName>Endere_os</relationshipName>
    <type>Lookup</type>
</CustomField>