creditas-sf/force-app/main/default/objects/Addresses__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Bairro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>