creditas-sf/force-app/main/default/objects/Addresses__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>