creditas-sf/force-app/main/default/objects/Addresses__c/fields/Recurso_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Recurso_Financeiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso Financeiro</label>
    <referenceTo>FinancialResources__c</referenceTo>
    <relationshipLabel>Endereços</relationshipLabel>
    <relationshipName>Endere_os</relationshipName>
    <type>Lookup</type>
</CustomField>