creditas-sf/force-app/main/default/objects/Addresses__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Logradouro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>