creditas-sf/force-app/main/default/objects/Addresses__c/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <label>Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>