creditas-sf/force-app/main/default/objects/Addresses__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo de endereço a ser inserido</description>
    <inlineHelpText>Insira o tipo do endereço que esse registro se refere</inlineHelpText>
    <label>Tipo de endereço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BILLING</fullName>
                <label>Cobrança</label>
            </value>
            <value>
                <fullName>HOME</fullName>
                <label>Residencial</label>
            </value>
            <value>
                <fullName>WORK</fullName>
                <label>Trabalho</label>
            </value>
            <value>
                <fullName>DELIVERY</fullName>
                <label>Correspondência</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Outros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>