creditas-sf/force-app/main/default/objects/Addresses__c/fields/TypeDescription__c.field-meta.xml
<CustomField>
    <fullName>TypeDescription__c</fullName>
    <description>Descrição/observação sobre o endereço</description>
    <inlineHelpText>Descrição/observação sobre o endereço</inlineHelpText>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>